# diploma

./: .gitignore
aho/: CMakeLists.txt  aho_genx.cpp  cm_aho.cpp  cm_aho.h  cpu_unit_test.cpp  gpu_aho.cpp  gpu_aho.h  kernel.cl  main.cpp  ocl_aho.cpp  ocl_aho.h  raw_aho.cpp  raw_aho.h
aho/benchmarks/: benchmark.cpp  ocl_benchmark.cpp
aho/test_data/: 1000_patterns  100_patterns  500_patterns  50_patterns  genome_100  genome_1000  genome_50  genome_500  simple_test_1  simple_test_1_ans  simple_test_2  simple_test_2_ans  test_long_string  test_long_string_ans
